<resources>
    <string name="app_name">ACalculadora</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="adition">+</string>
    <string name="equals">=</string>
    <string name="hashtag">#</string>
    <string name="exclamation">!</string>
    <string name="interrogation">(?)</string>
    <string name="less"><![CDATA[<]]></string>
    <string name="c">C</string>
    <string name="ponto">.</string>
</resources>