<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_visor"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#77302E2E"
        android:text="0"
        android:padding="20dp"
        android:textAlignment="textEnd"
        android:textSize="40sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="15">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:backgroundTint="@color/grey"
            android:id="@+id/button_c"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/c"
            android:layout_margin="2dp"
            android:textSize="35sp"/>

        <Button
            android:backgroundTint="@color/grey"
            android:id="@+id/button_less"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/less"
            android:layout_margin="2dp"
            android:textSize="35sp"/>

        <Button
            android:backgroundTint="@color/orange"
            android:id="@+id/button_exclamation"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/exclamation"
            android:layout_margin="2dp"
            android:textSize="35sp"/>

        <Button
            android:backgroundTint="@color/orange"
            android:id="@+id/button_interrogation"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:layout_height="match_parent"
            android:text="@string/interrogation"
            android:textSize="35sp"/>
    </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:backgroundTint="@color/greyCarregado"
            android:id="@+id/button_4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/_4"
            android:layout_margin="2dp"
            android:textSize="35sp"/>

        <Button
            android:backgroundTint="@color/greyCarregado"
            android:id="@+id/button_5"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/_5"
            android:layout_margin="2dp"
            android:textSize="35sp"/>

        <Button
            android:backgroundTint="@color/greyCarregado"
            android:id="@+id/button_6"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/_6"
            android:layout_margin="2dp"
            android:textSize="35sp"/>

        <Button
            android:backgroundTint="@color/orange"
            android:id="@+id/button_hashtag"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/hashtag"
            android:layout_margin="2dp"
            android:textSize="35sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <Button
            android:backgroundTint="@color/greyCarregado"
            android:id="@+id/button_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/_1"
            android:layout_margin="2dp"
            android:textSize="35sp"/>


        <Button
            android:backgroundTint="@color/greyCarregado"
            android:id="@+id/button_2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/_2"
            android:layout_margin="2dp"
            android:textSize="35sp"/>

        <Button
            android:backgroundTint="@color/greyCarregado"
            android:id="@+id/button_3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/_3"
            android:layout_margin="2dp"
            android:textSize="35sp"/>

        <Button
            android:backgroundTint="@color/orange"
            android:id="@+id/button_adition"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/adition"
            android:textSize="35sp" />
    </LinearLayout>





    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <Button
            android:backgroundTint="@color/greyCarregado"
            android:id="@+id/button_0"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/_0"
            android:layout_margin="2dp"
            android:textSize="35sp"
            />

        <Button
            android:backgroundTint="@color/greyCarregado"
            android:id="@+id/button_ponto"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/ponto"
            android:layout_margin="2dp"
            android:textSize="35sp"
            />

        <Button
            android:id="@+id/button_equals"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/orange"
            android:text="@string/equals"

            android:textSize="35sp"
            />
    </LinearLayout>




    </LinearLayout>














</LinearLayout>